# lazy-list

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/: MESSAGE.h  bookmarks_page.h  component_board.cpp  config_page.h  file_utils.h  home_page.h  main.cpp  recycle_bin_page.h  search_bar.h  window.cpp
src/include/: config_parser.h  file_operation.h  file_operation_dialog.h  file_utils.h  global_var.h  re_file_operation_dialog.h
test/: find_large_file.cpp  test_file_operation.cpp  tmp.cpp
